--- a/mainfile/email_validation/templates/core.html
+++ b/mainfile/email_validation/templates/core.html
@@ -16,9 +16,9 @@
     <!-- below my js code -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> -->
-    <script type="text/javascript"  src="countdown.js"></script>
+    <!-- <script type="text/javascript"  src="countdown.js"></script> -->
 </head>
 <body>
     <section class="vh-100" style="background-color: #eee;">
